# data-cleaning-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/datacleaner/: Cleaner.py  DataLoader.py  Saver.py  main.py
